added simple, upgraded and faster sentiment analysis

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -31,7 +31,9 @@
     "\n",
     "`LABEL` is defined by a `LabelField`, a special subset of the `Field` class specifically for handling labels. We will explain the `tensor_type` argument later.\n",
     "\n",
-    "For more on `Fields`, go [here](https://github.com/pytorch/text/blob/master/torchtext/data/field.py)."
+    "For more on `Fields`, go [here](https://github.com/pytorch/text/blob/master/torchtext/data/field.py).\n",
+    "\n",
+    "We also set the random seed for reproducibility. "
    ]
   },
   {
@@ -42,6 +44,8 @@
    "source": [
     "import torch\n",
     "from torchtext import data\n",
+    "\n",
+    "torch.manual_seed(1234)\n",
     "\n",
     "TEXT = data.Field(tokenize='spacy')\n",
     "LABEL = data.LabelField(tensor_type=torch.FloatTensor)"
@@ -65,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<torchtext.datasets.imdb.IMDB object at 0x7f49845e7e48>\n"
+      "<torchtext.datasets.imdb.IMDB object at 0x7f6bd8c57748>\n"
      ]
     }
    ],
@@ -119,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train.fields: {'text': <torchtext.data.field.Field object at 0x7f4984522860>, 'label': <torchtext.data.field.LabelField object at 0x7f4984522898>}\n"
+      "train.fields: {'text': <torchtext.data.field.Field object at 0x7f6bd8c577f0>, 'label': <torchtext.data.field.LabelField object at 0x7f6bd8c57898>}\n"
      ]
     }
    ],
@@ -270,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('the', 202014), (',', 191906), ('.', 165343), ('and', 109087), ('a', 108907), ('of', 100305), ('to', 93214), ('is', 76333), ('in', 61247), ('I', 54614), ('it', 53676), ('that', 49225), ('\"', 44368), (\"'s\", 43142), ('this', 42495), ('-', 37056), ('/><br', 35821), ('was', 34726), ('as', 30259), ('with', 29840)]\n"
+      "[('the', 203155), (',', 193390), ('.', 165171), ('and', 109850), ('a', 109643), ('of', 100950), ('to', 93644), ('is', 76192), ('in', 61466), ('I', 54095), ('it', 53443), ('that', 49187), ('\"', 43962), (\"'s\", 43484), ('this', 42213), ('-', 37256), ('/><br', 35775), ('was', 34852), ('as', 30431), ('with', 29953)]\n"
      ]
     }
    ],
@@ -318,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f4928420400>, {'pos': 0, 'neg': 1})\n"
+      "defaultdict(<function _default_unk_index at 0x7f6b7f379400>, {'neg': 0, 'pos': 1})\n"
      ]
     }
    ],
@@ -411,8 +415,8 @@
     "        \n",
     "        output, hidden = self.rnn(embedded)\n",
     "        \n",
-    "        #output = [sent len, batch size, hid. dim]\n",
-    "        #hidden = [1, batch size, hid. dim]\n",
+    "        #output = [sent len, batch size, hid dim]\n",
+    "        #hidden = [1, batch size, hid dim]\n",
     "        \n",
     "        assert torch.equal(output[-1,:,:], hidden.squeeze(0))\n",
     "        \n",
@@ -436,12 +440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "INPUT_DIM = len(TEXT.vocab)\n",
-    "EMBEDDING_DIM = 128\n",
+    "EMBEDDING_DIM = 100\n",
     "HIDDEN_DIM = 256\n",
     "OUTPUT_DIM = 1\n",
     "\n",
@@ -466,13 +470,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch.optim as optim\n",
     "\n",
-    "optimizer = optim.SGD(model.parameters(), lr=1e-1)"
+    "optimizer = optim.SGD(model.parameters(), lr=1e-3)"
    ]
   },
   {
@@ -490,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -669,21 +673,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01, Train Loss: 0.698, Train Acc: 50.21%, Val. Loss: 0.695596, Val. Acc: 50.66%\n",
-      "Epoch: 02, Train Loss: 0.694, Train Acc: 50.21%, Val. Loss: 0.693226, Val. Acc: 51.42%\n",
-      "Epoch: 03, Train Loss: 0.694, Train Acc: 50.04%, Val. Loss: 0.692832, Val. Acc: 50.31%\n",
-      "Epoch: 04, Train Loss: 0.693, Train Acc: 49.76%, Val. Loss: 0.693758, Val. Acc: 48.89%\n",
-      "Epoch: 05, Train Loss: 0.693, Train Acc: 49.42%, Val. Loss: 0.693749, Val. Acc: 50.52%\n",
-      "Epoch: 06, Train Loss: 0.693, Train Acc: 50.35%, Val. Loss: 0.693749, Val. Acc: 49.64%\n",
-      "Epoch: 07, Train Loss: 0.693, Train Acc: 49.88%, Val. Loss: 0.695526, Val. Acc: 48.99%\n",
-      "Epoch: 08, Train Loss: 0.693, Train Acc: 50.57%, Val. Loss: 0.692796, Val. Acc: 50.33%\n",
-      "Epoch: 09, Train Loss: 0.693, Train Acc: 50.19%, Val. Loss: 0.693078, Val. Acc: 50.22%\n",
-      "Epoch: 10, Train Loss: 0.693, Train Acc: 49.41%, Val. Loss: 0.692968, Val. Acc: 51.72%\n"
+      "Epoch: 01, Train Loss: 0.694, Train Acc: 49.69%, Val. Loss: 0.698854, Val. Acc: 48.60%\n",
+      "Epoch: 02, Train Loss: 0.693, Train Acc: 49.63%, Val. Loss: 0.699274, Val. Acc: 50.05%\n",
+      "Epoch: 03, Train Loss: 0.693, Train Acc: 49.59%, Val. Loss: 0.699019, Val. Acc: 48.54%\n",
+      "Epoch: 04, Train Loss: 0.693, Train Acc: 49.51%, Val. Loss: 0.698775, Val. Acc: 48.32%\n",
+      "Epoch: 05, Train Loss: 0.693, Train Acc: 50.20%, Val. Loss: 0.698794, Val. Acc: 48.34%\n"
      ]
     }
    ],
    "source": [
-    "N_EPOCHS = 10\n",
+    "N_EPOCHS = 5\n",
     "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
@@ -704,9 +703,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/.conda/envs/pytorch04/lib/python3.6/site-packages/torchtext/data/field.py:322: UserWarning: volatile was removed and now has no effect. Use `with torch.no_grad():` instead.\n",
+      "  return Variable(arr, volatile=not train)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.710, Test Acc: 46.33%\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_acc = evaluate(model, test_iter, optimizer, criterion)\n",
     "\n",
@@ -717,13 +732,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the next notebook, we will:\n",
+    "## Next Steps\n",
+    "\n",
+    "In the next notebook, the improvements we will make are:\n",
     "- different optimizer\n",
     "- use pre-trained word embeddings\n",
     "- different RNN architecture\n",
     "- bidirectional RNN\n",
     "- multi-layer RNN\n",
-    "- regularization"
+    "- regularization\n",
+    "\n",
+    "This will allow us to achieve ~85% accuracy."
    ]
   }
  ],
