removed unnecessary passing of optimizer to evaluate function

--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -399,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(model, iterator, optimizer, criterion):\n",
+    "def evaluate(model, iterator, criterion):\n",
     "    \n",
     "    epoch_loss = 0\n",
     "    epoch_acc = 0\n",
@@ -460,9 +460,9 @@
     "for epoch in range(N_EPOCHS):\n",
     "\n",
     "    train_loss, train_acc = train(model, train_iter, optimizer, criterion)\n",
-    "    valid_loss, valid_acc = evaluate(model, valid_iter, optimizer, criterion)\n",
+    "    valid_loss, valid_acc = evaluate(model, valid_iter, criterion)\n",
     "    \n",
-    "    print(f'Epoch: {epoch+1:02}, Train Loss: {train_loss:.3f}, Train Acc: {train_acc*100:.2f}%, Val. Loss: {valid_loss:3f}, Val. Acc: {valid_acc*100:.2f}%')"
+    "    print(f'Epoch: {epoch+1:02}, Train Loss: {train_loss:.3f}, Train Acc: {train_acc*100:.2f}%, Val. Loss: {valid_loss:.3f}, Val. Acc: {valid_acc*100:.2f}%')"
    ]
   },
   {
@@ -496,7 +496,7 @@
     }
    ],
    "source": [
-    "test_loss, test_acc = evaluate(model, test_iter, optimizer, criterion)\n",
+    "test_loss, test_acc = evaluate(model, test_iter, criterion)\n",
     "\n",
     "print(f'Test Loss: {test_loss:.3f}, Test Acc: {test_acc*100:.2f}%')"
    ]
