fixed train/valid splits not being deterministic

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "For more on `Fields`, go [here](https://github.com/pytorch/text/blob/master/torchtext/data/field.py).\n",
     "\n",
-    "We also set the random seed for reproducibility. "
+    "We also set the random seeds for reproducibility. "
    ]
   },
   {
@@ -45,7 +45,10 @@
     "import torch\n",
     "from torchtext import data\n",
     "\n",
-    "torch.manual_seed(1234)\n",
+    "SEED = 1234\n",
+    "\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed(SEED)\n",
     "\n",
     "TEXT = data.Field(tokenize='spacy')\n",
     "LABEL = data.LabelField(tensor_type=torch.FloatTensor)"
@@ -64,21 +67,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<torchtext.datasets.imdb.IMDB object at 0x7f6bd8c57748>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torchtext import datasets\n",
     "\n",
-    "train, test = datasets.IMDB.splits(TEXT, LABEL)\n",
-    "\n",
-    "print(train)"
+    "train, test = datasets.IMDB.splits(TEXT, LABEL)"
    ]
   },
   {
@@ -123,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train.fields: {'text': <torchtext.data.field.Field object at 0x7f6bd8c577f0>, 'label': <torchtext.data.field.LabelField object at 0x7f6bd8c57898>}\n"
+      "train.fields: {'text': <torchtext.data.field.Field object at 0x7fda01652240>, 'label': <torchtext.data.field.LabelField object at 0x7fda01652518>}\n"
      ]
     }
    ],
@@ -161,7 +154,9 @@
    "source": [
     "The IMDb dataset only has train/test splits, so we need to create a validation set. We can do this with the `.split()` method. \n",
     "\n",
-    "By default this splits 70/30, however by passing a `split_ratio` argument, we can change the ratio of the split, i.e. a `split_ratio` of 0.8 would mean 80% of the examples make up the training set and 20% make up the validation set."
+    "By default this splits 70/30, however by passing a `split_ratio` argument, we can change the ratio of the split, i.e. a `split_ratio` of 0.8 would mean 80% of the examples make up the training set and 20% make up the validation set. \n",
+    "\n",
+    "We also pass our random seed to the `random_state` argument, ensuring that we get the same train/validation split each time."
    ]
   },
   {
@@ -170,7 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, valid = train.split()"
+    "import random\n",
+    "\n",
+    "train, valid = train.split(random_state=random.seed(SEED))"
    ]
   },
   {
@@ -182,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('the', 203155), (',', 193390), ('.', 165171), ('and', 109850), ('a', 109643), ('of', 100950), ('to', 93644), ('is', 76192), ('in', 61466), ('I', 54095), ('it', 53443), ('that', 49187), ('\"', 43962), (\"'s\", 43484), ('this', 42213), ('-', 37256), ('/><br', 35775), ('was', 34852), ('as', 30431), ('with', 29953)]\n"
+      "[('the', 202790), (',', 192769), ('.', 165639), ('and', 109470), ('a', 109249), ('of', 100791), ('to', 93641), ('is', 76253), ('in', 61377), ('I', 54031), ('it', 53489), ('that', 49111), ('\"', 44667), (\"'s\", 43331), ('this', 42386), ('-', 36979), ('/><br', 35822), ('was', 35035), ('as', 30389), ('with', 29940)]\n"
      ]
     }
    ],
@@ -293,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -317,14 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f6b7f379400>, {'neg': 0, 'pos': 1})\n"
+      "defaultdict(<function _default_unk_index at 0x7fd9a7d341e0>, {'neg': 0, 'pos': 1})\n"
      ]
     }
    ],
@@ -343,13 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
-    "train_iter, valid_iter, test_iter = data.BucketIterator.splits(\n",
+    "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train, valid, test), \n",
     "    batch_size=BATCH_SIZE, \n",
     "    sort_key=lambda x: len(x.text), \n",
@@ -393,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,51 +661,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ben/.conda/envs/pytorch04/lib/python3.6/site-packages/torchtext/data/field.py:322: UserWarning: volatile was removed and now has no effect. Use `with torch.no_grad():` instead.\n",
-      "  return Variable(arr, volatile=not train)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 01, Train Loss: 0.694, Train Acc: 49.69%, Val. Loss: 0.698854, Val. Acc: 48.60%\n",
-      "Epoch: 02, Train Loss: 0.693, Train Acc: 49.63%, Val. Loss: 0.699274, Val. Acc: 50.05%\n",
-      "Epoch: 03, Train Loss: 0.693, Train Acc: 49.59%, Val. Loss: 0.699019, Val. Acc: 48.54%\n",
-      "Epoch: 04, Train Loss: 0.693, Train Acc: 49.51%, Val. Loss: 0.698775, Val. Acc: 48.32%\n",
-      "Epoch: 05, Train Loss: 0.693, Train Acc: 50.20%, Val. Loss: 0.698794, Val. Acc: 48.34%\n"
-     ]
-    }
-   ],
-   "source": [
-    "N_EPOCHS = 5\n",
-    "\n",
-    "for epoch in range(N_EPOCHS):\n",
-    "\n",
-    "    train_loss, train_acc = train(model, train_iter, optimizer, criterion)\n",
-    "    valid_loss, valid_acc = evaluate(model, valid_iter, criterion)\n",
-    "    \n",
-    "    print(f'Epoch: {epoch+1:02}, Train Loss: {train_loss:.3f}, Train Acc: {train_acc*100:.2f}%, Val. Loss: {valid_loss:.3f}, Val. Acc: {valid_acc*100:.2f}%')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You may have noticed the loss is not really decreasing and the accuracy is poor. This is due to several issues with the model which we'll improve in the next notebook.\n",
-    "\n",
-    "Finally, the metric you actually care about, the test loss and accuracy."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -724,12 +676,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.710, Test Acc: 46.33%\n"
+      "Epoch: 01, Train Loss: 0.694, Train Acc: 50.11%, Val. Loss: 0.696, Val. Acc: 50.28%\n",
+      "Epoch: 02, Train Loss: 0.693, Train Acc: 49.83%, Val. Loss: 0.697, Val. Acc: 51.00%\n",
+      "Epoch: 03, Train Loss: 0.693, Train Acc: 50.23%, Val. Loss: 0.697, Val. Acc: 50.83%\n",
+      "Epoch: 04, Train Loss: 0.693, Train Acc: 49.94%, Val. Loss: 0.696, Val. Acc: 49.97%\n",
+      "Epoch: 05, Train Loss: 0.693, Train Acc: 50.07%, Val. Loss: 0.697, Val. Acc: 51.04%\n"
      ]
     }
    ],
    "source": [
-    "test_loss, test_acc = evaluate(model, test_iter, criterion)\n",
+    "N_EPOCHS = 5\n",
+    "\n",
+    "for epoch in range(N_EPOCHS):\n",
+    "\n",
+    "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
+    "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
+    "    \n",
+    "    print(f'Epoch: {epoch+1:02}, Train Loss: {train_loss:.3f}, Train Acc: {train_acc*100:.2f}%, Val. Loss: {valid_loss:.3f}, Val. Acc: {valid_acc*100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You may have noticed the loss is not really decreasing and the accuracy is poor. This is due to several issues with the model which we'll improve in the next notebook.\n",
+    "\n",
+    "Finally, the metric you actually care about, the test loss and accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/.conda/envs/pytorch04/lib/python3.6/site-packages/torchtext/data/field.py:322: UserWarning: volatile was removed and now has no effect. Use `with torch.no_grad():` instead.\n",
+      "  return Variable(arr, volatile=not train)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.710, Test Acc: 47.84%\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
     "print(f'Test Loss: {test_loss:.3f}, Test Acc: {test_acc*100:.2f}%')"
    ]
