--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'film is', 'This film', 'is terrible']"
+       "['This', 'film', 'is', 'terrible', 'is terrible', 'film is', 'This film']"
       ]
      },
      "execution_count": 2,
@@ -82,7 +82,10 @@
     "from torchtext import data\n",
     "from torchtext import datasets\n",
     "\n",
-    "torch.manual_seed(1234)\n",
+    "SEED = 1234\n",
+    "\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed(SEED)\n",
     "\n",
     "TEXT = data.Field(tokenize='spacy', preprocessing=generate_bigrams)\n",
     "LABEL = data.LabelField(tensor_type=torch.FloatTensor)"
@@ -101,9 +104,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
     "train, test = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
-    "train, valid = train.split()"
+    "train, valid = train.split(random_state=random.seed(SEED))"
    ]
   },
   {
@@ -117,20 +122,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<function _default_unk_index at 0x7f4feb020158>, {'neg': 0, 'pos': 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TEXT.build_vocab(train, max_size=25000, vectors=\"glove.6B.100d\")\n",
-    "LABEL.build_vocab(train)\n",
-    "\n",
-    "print(LABEL.vocab.stoi)"
+    "LABEL.build_vocab(train)"
    ]
   },
   {
@@ -148,7 +143,7 @@
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
-    "train_iter, valid_iter, test_iter = data.BucketIterator.splits(\n",
+    "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train, valid, test), \n",
     "    batch_size=BATCH_SIZE, \n",
     "    sort_key=lambda x: len(x.text), \n",
@@ -252,7 +247,7 @@
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
        "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "        [-0.6065, -0.1550,  0.4392,  ..., -0.2776, -0.4141,  0.9361],\n",
        "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]])"
       ]
      },
@@ -446,11 +441,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01, Train Loss: 0.687, Train Acc: 57.60%, Val. Loss: 0.634660, Val. Acc: 71.32%\n",
-      "Epoch: 02, Train Loss: 0.649, Train Acc: 72.87%, Val. Loss: 0.512169, Val. Acc: 76.34%\n",
-      "Epoch: 03, Train Loss: 0.575, Train Acc: 79.32%, Val. Loss: 0.445301, Val. Acc: 79.78%\n",
-      "Epoch: 04, Train Loss: 0.498, Train Acc: 83.25%, Val. Loss: 0.403604, Val. Acc: 83.26%\n",
-      "Epoch: 05, Train Loss: 0.433, Train Acc: 86.34%, Val. Loss: 0.386188, Val. Acc: 85.46%\n"
+      "Epoch: 01, Train Loss: 0.688, Train Acc: 56.85%, Val. Loss: 0.644, Val. Acc: 71.34%\n",
+      "Epoch: 02, Train Loss: 0.656, Train Acc: 70.80%, Val. Loss: 0.523, Val. Acc: 75.57%\n",
+      "Epoch: 03, Train Loss: 0.585, Train Acc: 79.04%, Val. Loss: 0.447, Val. Acc: 79.60%\n",
+      "Epoch: 04, Train Loss: 0.505, Train Acc: 83.24%, Val. Loss: 0.423, Val. Acc: 82.47%\n",
+      "Epoch: 05, Train Loss: 0.439, Train Acc: 85.92%, Val. Loss: 0.395, Val. Acc: 85.01%\n"
      ]
     }
    ],
@@ -459,8 +454,8 @@
     "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
-    "    train_loss, train_acc = train(model, train_iter, optimizer, criterion)\n",
-    "    valid_loss, valid_acc = evaluate(model, valid_iter, criterion)\n",
+    "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
+    "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
     "    print(f'Epoch: {epoch+1:02}, Train Loss: {train_loss:.3f}, Train Acc: {train_acc*100:.2f}%, Val. Loss: {valid_loss:.3f}, Val. Acc: {valid_acc*100:.2f}%')"
    ]
@@ -491,12 +486,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.396, Test Acc: 85.06%\n"
+      "Test Loss: 0.387, Test Acc: 85.16%\n"
      ]
     }
    ],
    "source": [
-    "test_loss, test_acc = evaluate(model, test_iter, criterion)\n",
+    "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
     "print(f'Test Loss: {test_loss:.3f}, Test Acc: {test_acc*100:.2f}%')"
    ]
@@ -543,7 +538,7 @@
     {
      "data": {
       "text/plain": [
-       "5.865559415951793e-08"
+       "2.414095661151805e-07"
       ]
      },
      "execution_count": 18,
