--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -37,15 +37,19 @@
     "import torch\n",
     "from torchtext import data\n",
     "from torchtext import datasets\n",
+    "import random\n",
     "\n",
-    "torch.manual_seed(1234)\n",
+    "SEED = 1234\n",
+    "\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed(SEED)\n",
     "\n",
     "TEXT = data.Field(tokenize='spacy')\n",
     "LABEL = data.LabelField(tensor_type=torch.FloatTensor)\n",
     "\n",
     "train, test = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
-    "train, valid = train.split()"
+    "train, valid = train.split(random_state=random.seed(SEED))"
    ]
   },
   {
@@ -54,27 +58,19 @@
    "source": [
     "The first update, is the addition of pre-trained word embeddings. These vectors have been trained on corpuses of billions of tokens. Now, instead of having our word embeddings initialized randomly, they are initialized with these pre-trained vectors, where words that appear in similar contexts appear nearby in this vector space.\n",
     "\n",
-    "The first step to using these is to specify the vectors and download them, which is passed as an argument to `build_vocab`. The `glove` is the algorithm used to calculate the vectors, go [here](https://nlp.stanford.edu/projects/glove/) for more. `6B` indicates these vectors were trained on 6 billion tokens. `100d` indicates these vectors are 100-dimensional."
+    "The first step to using these is to specify the vectors and download them, which is passed as an argument to `build_vocab`. The `glove` is the algorithm used to calculate the vectors, go [here](https://nlp.stanford.edu/projects/glove/) for more. `6B` indicates these vectors were trained on 6 billion tokens. `100d` indicates these vectors are 100-dimensional.\n",
+    "\n",
+    "**Note**: these vectors are about 862MB, so watch out if you have a limited internet connection."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<function _default_unk_index at 0x7f2e41287400>, {'neg': 0, 'pos': 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TEXT.build_vocab(train, max_size=25000, vectors=\"glove.6B.100d\")\n",
-    "LABEL.build_vocab(train)\n",
-    "\n",
-    "print(LABEL.vocab.stoi)"
+    "LABEL.build_vocab(train)"
    ]
   },
   {
@@ -92,7 +88,7 @@
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
-    "train_iter, valid_iter, test_iter = data.BucketIterator.splits(\n",
+    "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
     "    (train, valid, test), \n",
     "    batch_size=BATCH_SIZE, \n",
     "    sort_key=lambda x: len(x.text), \n",
@@ -249,9 +245,9 @@
        "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [ 0.2945,  0.3106,  0.4844,  ..., -0.5248, -0.5791,  1.1295],\n",
-       "        [-0.2146,  0.6712,  0.3821,  ...,  0.4095,  0.7454,  0.0046],\n",
-       "        [ 0.0918,  0.1511,  0.2325,  ..., -0.4993,  0.3734,  0.4623]])"
+       "        [-0.0038,  0.5892, -0.3353,  ...,  0.3862,  0.1623,  0.7502],\n",
+       "        [-0.4309, -0.1535,  0.5628,  ...,  0.1400,  0.2439,  0.0888],\n",
+       "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809]])"
       ]
      },
      "execution_count": 7,
@@ -446,11 +442,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01, Train Loss: 0.672, Train Acc: 58.34%, Val. Loss: 0.708131, Val. Acc: 66.83%\n",
-      "Epoch: 02, Train Loss: 0.677, Train Acc: 55.80%, Val. Loss: 0.686660, Val. Acc: 59.13%\n",
-      "Epoch: 03, Train Loss: 0.640, Train Acc: 62.92%, Val. Loss: 0.618306, Val. Acc: 64.61%\n",
-      "Epoch: 04, Train Loss: 0.437, Train Acc: 81.05%, Val. Loss: 0.361119, Val. Acc: 85.10%\n",
-      "Epoch: 05, Train Loss: 0.290, Train Acc: 88.74%, Val. Loss: 0.309711, Val. Acc: 87.88%\n"
+      "Epoch: 01, Train Loss: 0.678, Train Acc: 57.77%, Val. Loss: 0.630, Val. Acc: 66.30%\n",
+      "Epoch: 02, Train Loss: 0.639, Train Acc: 64.19%, Val. Loss: 0.591, Val. Acc: 69.22%\n",
+      "Epoch: 03, Train Loss: 0.512, Train Acc: 75.75%, Val. Loss: 0.503, Val. Acc: 75.02%\n",
+      "Epoch: 04, Train Loss: 0.399, Train Acc: 83.24%, Val. Loss: 0.404, Val. Acc: 83.40%\n",
+      "Epoch: 05, Train Loss: 0.302, Train Acc: 87.86%, Val. Loss: 0.330, Val. Acc: 87.43%\n"
      ]
     }
    ],
@@ -459,8 +455,8 @@
     "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
-    "    train_loss, train_acc = train(model, train_iter, optimizer, criterion)\n",
-    "    valid_loss, valid_acc = evaluate(model, valid_iter, criterion)\n",
+    "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
+    "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
     "    print(f'Epoch: {epoch+1:02}, Train Loss: {train_loss:.3f}, Train Acc: {train_acc*100:.2f}%, Val. Loss: {valid_loss:.3f}, Val. Acc: {valid_acc*100:.2f}%')"
    ]
@@ -489,12 +485,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.381, Test Acc: 84.27%\n"
+      "Test Loss: 0.384, Test Acc: 85.34%\n"
      ]
     }
    ],
    "source": [
-    "test_loss, test_acc = evaluate(model, test_iter, criterion)\n",
+    "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
     "print(f'Test Loss: {test_loss:.3f}, Test Acc: {test_acc*100:.2f}%')"
    ]
@@ -551,7 +547,7 @@
     {
      "data": {
       "text/plain": [
-       "0.27671560645103455"
+       "0.014928288757801056"
       ]
      },
      "execution_count": 16,
@@ -578,7 +574,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9214414954185486"
+       "0.88564133644104"
       ]
      },
      "execution_count": 17,
