added conv tutorial

--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'is terrible', 'film is', 'This film']"
+       "['This', 'film', 'is', 'terrible', 'This film', 'film is', 'is terrible']"
       ]
      },
      "execution_count": 2,
@@ -538,7 +538,7 @@
     {
      "data": {
       "text/plain": [
-       "2.414095661151805e-07"
+       "2.414054449673131e-07"
       ]
      },
      "execution_count": 18,
@@ -575,6 +575,15 @@
    ],
    "source": [
     "predict_sentiment(\"This film is great\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps\n",
+    "\n",
+    "In the final notebook we'll use convolutional neural networks (CNNs) to perform sentiment analysis, and get our best accuracy yet!"
    ]
   }
  ],
