fixed typo in CNN model (thanks Remy) and changed size of tensor comments to use n_filters instead of n_channels, reflecting the actual variable names used

--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -181,17 +181,17 @@
     "        conved_1 = F.relu(self.conv_1(embedded).squeeze(3))\n",
     "        conved_2 = F.relu(self.conv_2(embedded).squeeze(3))\n",
     "            \n",
-    "        #conv_n = [batch size, n_channels, sent len - filter_sizes[n]]\n",
+    "        #conv_n = [batch size, n_filters, sent len - filter_sizes[n]]\n",
     "        \n",
-    "        pooled_0 = F.max_pool1d(conv_0, conv_0.shape[2]).squeeze(2)\n",
-    "        pooled_1 = F.max_pool1d(conv_1, conv_1.shape[2]).squeeze(2)\n",
-    "        pooled_2 = F.max_pool1d(conv_2, conv_2.shape[2]).squeeze(2)\n",
+    "        pooled_0 = F.max_pool1d(conved_0, conved_0.shape[2]).squeeze(2)\n",
+    "        pooled_1 = F.max_pool1d(conved_1, conved_1.shape[2]).squeeze(2)\n",
+    "        pooled_2 = F.max_pool1d(conved_2, conved_2.shape[2]).squeeze(2)\n",
     "        \n",
-    "        #pooled_n = [batch size, n_channels]\n",
+    "        #pooled_n = [batch size, n_filters]\n",
     "        \n",
     "        cat = self.dropout(torch.cat((pooled_0, pooled_1, pooled_2), dim=1))\n",
     "\n",
-    "        #cat = [batch size, n_channels * len(filter_sizes)]\n",
+    "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
     "            \n",
     "        return self.fc(cat)"
    ]
@@ -240,15 +240,15 @@
     "        \n",
     "        conved = [F.relu(conv(embedded)).squeeze(3) for conv in self.convs]\n",
     "            \n",
-    "        #conv_n = [batch size, n_channels, sent len - filter_sizes[n]]\n",
+    "        #conv_n = [batch size, n_filters, sent len - filter_sizes[n]]\n",
     "        \n",
     "        pooled = [F.max_pool1d(conv, conv.shape[2]).squeeze(2) for conv in conved]\n",
     "        \n",
-    "        #pooled_n = [batch size, n_channels]\n",
+    "        #pooled_n = [batch size, n_filters]\n",
     "        \n",
     "        cat = self.dropout(torch.cat(pooled, dim=1))\n",
     "\n",
-    "        #cat = [batch size, n_channels * len(filter_sizes)]\n",
+    "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
     "            \n",
     "        return self.fc(cat)"
    ]
